--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -305,9 +305,11 @@ Ban Giám Đốc HSBC và VinaCapital</td>
 					      </tr>
 						  <tr>
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">TBU, HSBC Việt Nam</strong><br />
+							    <br />
 						      Chia sẻ tổng quan tình hình kinh tế, đầu tư và chứng khoán tại Việt Nam;<br />
 						      triển vọng 2023</td>
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc kinh doanh, VinaCapital</strong><br />
+							    <br />
 						      Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
 						  </tr>
 						  </table></td>
@@ -378,7 +380,7 @@ Ban Giám Đốc HSBC và VinaCapital</td>
 		<tr>
 			<td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body1">
 				<tr>
-					<td width="56" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
+					<td width="56" align="left" bgcolor="#b7001f" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
 					<td align="left" bgcolor="#b7001f" valign="middle" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">HƯỚNG DẪN THAM GIA</td>
 					<td align="left" width="233" bgcolor="#6b0f1c" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_6.jpg" width="28" height="auto" alt="" style="display: block" /></td>
 					<td width="56" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
