--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -304,12 +304,12 @@ Ban Giám Đốc HSBC và VinaCapital</td>
 								</table></td>
 					      </tr>
 						  <tr>
-							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">TBU, HSBC Việt Nam</strong><br />
-							    <br />
+							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">TBU, HSBC Việt Nam<br />
+							    <br /></strong>
 						      Chia sẻ tổng quan tình hình kinh tế, đầu tư và chứng khoán tại Việt Nam;<br />
 						      triển vọng 2023</td>
-							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc kinh doanh, VinaCapital</strong><br />
-							    <br />
+							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc kinh doanh, VinaCapital<br />
+							    <br /></strong>
 						      Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
 						  </tr>
 						  </table></td>
