--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -304,14 +304,25 @@ Ban Giám Đốc HSBC và VinaCapital</td>
 								</table></td>
 					      </tr>
 						  <tr>
-							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">TBU, HSBC Việt Nam<br />
-							    <br /></strong>
-						      Chia sẻ tổng quan tình hình kinh tế, đầu tư và chứng khoán tại Việt Nam;<br />
-						      triển vọng 2023</td>
-							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc kinh doanh, VinaCapital<br />
-							    <br /></strong>
-						      Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
-						  </tr>
+						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+								<tr>
+									<td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">TBU, HSBC Việt Nam</strong></td>
+								</tr>
+								<tr>
+								  <td align="center" valign="top" style="padding: 8px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ tổng quan tình hình kinh tế, đầu tư và chứng khoán tại Việt Nam;<br />
+triển vọng 2023</td>
+							    </tr>
+								</table></td>
+						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+								<tr>
+									<td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc kinh doanh,<br />
+VinaCapital</strong></td>
+								</tr>
+								<tr>
+								  <td align="center" valign="top" style="padding: 8px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><span style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
+							    </tr>
+								</table></td>
+					      </tr>
 						  </table></td>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
@@ -380,9 +391,8 @@ Ban Giám Đốc HSBC và VinaCapital</td>
 		<tr>
 			<td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body1">
 				<tr>
-					<td width="56" align="left" bgcolor="#b7001f" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
-					<td align="left" bgcolor="#b7001f" valign="middle" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">HƯỚNG DẪN THAM GIA</td>
-					<td align="left" width="233" bgcolor="#6b0f1c" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_6.jpg" width="28" height="auto" alt="" style="display: block" /></td>
+					<td align="left" bgcolor="#db0011" valign="middle" style="padding: 0 0 0 84px; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">HƯỚNG DẪN THAM GIA</td>
+					<td align="left" width="233" bgcolor="#6b0f1c" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_3.jpg" width="36" height="auto" alt="" style="display: block" /></td>
 					<td width="56" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
 				</tr>
 				</table></td>
