--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -413,7 +413,7 @@ VinaCapital</strong></td>
 						  <tr>
 						    <td width="10" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&bull;</td>
 							  <td valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Đăng ký tham gia hội thảo trực tiếp tại GEM Center:</strong><br />
-Xin vui lòng liên hệ Giám đốc Quan hệ Khách hàng của Quý khách để Đăng ký trước ngày 10/11/2022 (số lượng chỗ ngồi có giới hạn, chúng tôi sẽ phản hồi sau khi nhận được đăng ký của quý khách)</td>
+Xin vui lòng liên hệ Giám đốc Quan hệ Khách hàng của Quý khách để Đăng ký trước ngày 10/11/2022 (số lượng chỗ ngồi có giới hạn, chúng tôi sẽ phản hồi sau khi nhận được đăng ký của Quý khách)</td>
 						  </tr>
 						  <tr>
 						    <td valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
