--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -69,7 +69,7 @@
           </table></td>
         </tr>
         <tr>
-          <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_key.png" width="700" height="auto" alt="" style="display: block" /></td>
+          <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_key_2.png" width="700" height="auto" alt="" style="display: block" /></td>
         </tr>
         <tr>
           <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
