--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -321,7 +321,7 @@ triển vọng 2023</td>
 VinaCapital</strong></td>
 								</tr>
 								<tr>
-								  <td align="center" valign="top" style="padding: 8px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><span style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
+								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
 							    </tr>
 								</table></td>
 					      </tr>
