--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>TITLE PAGE</title>
+<title>Hội thảo về đầu tư cùng HSBC & VinaCapital</title>
 <style type="text/css">
 * {
 	box-sizing: border-box;
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">PRE HEADER</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Tham dự hội thảo tự tin đầu tư, đón chào thịnh vượng cùng HSBC</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0"  style="background-color:#FFFFFF; margin: 0 auto;" class="chs_body">
   <tr>
     <td style="margin: 0px; padding: 0px; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -54,7 +54,7 @@
                 <td>&nbsp;</td>
                 <td style="margin: 0px; padding: 0px; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                   <tr>
-                    <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_hsbc_logo.jpg" width="111" height="28" alt="" style="display: block"/></td>
+                    <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_hsbc_logo.jpg" width="256" height="28" alt="" style="display: block"/></td>
                     <td width="50%" align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                   </tr>
                 </table></td>
@@ -81,17 +81,17 @@
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 35px; font-family: Arial, Helvetica, sans-serif !important;">Thư mời tham dự<br />
-                      Hội thảo trực tuyến qua zoom</td>
+                      Hội thảo trực tuyến qua Zoom</td>
                     </tr>
                     <tr>
                       <td align="left" height="56" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">HSBC Premier trân trọng kính mời Quý khách hàng Premier tham dự hội thảo:</td>
+                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">HSBC trân trọng kính mời Quý khách hàng tham dự hội thảo:</td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important;"><strong>Tự tin đầu tư, đón chào thịnh vượng<br />
-                      cùng HSBC Premier và VinaCapital.</strong></td>
+                      cùng HSBC và VinaCapital.</strong></td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
@@ -173,7 +173,7 @@
                     <tr>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Khai mạc và phát biểu chào mừng từ đại diện<br />
-Ban Giám Đốc HSBC và VinaCapital</td>
+Ban Giám đốc HSBC và VinaCapital</td>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
@@ -294,7 +294,7 @@ triển vọng 2023</td>
 								</table></td>
 						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong style="font-size: 14px">Giám đốc kinh doanh,<br />
+									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong style="font-size: 14px">Giám đốc Kinh doanh,<br />
 VinaCapital</strong></td>
 								</tr>
 								<tr>
@@ -417,7 +417,7 @@ VinaCapital</strong></td>
               <tr>
                 <td>&nbsp;</td>
                 <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Trân trọng,<br />
-                HSBC Premier.</td>
+                HSBC Premier</td>
                 <td>&nbsp;</td>
               </tr>
             </table></td>
