--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -97,7 +97,7 @@
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Tại hội thảo chúng tôi sẽ cập nhật tổng quan tình hình kinh tế, đầu tư, chứng khoán tại Việt Nam, triển vọng 2023; và chia sẻ giải pháp đầu tư nhằm giảm thiểu rủi ro - gia tăng cơ hội để giúp Quý khách tăng trưởng tài sản đạt được mục tiêu tài chính bền vững trung và dài hạn. Hãy tham gia hội thảo và cùng HSBC và VinaCapital hướng đến một tương lai thịnh vượng.</td>
+                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Tại hội thảo chúng tôi sẽ cập nhật tổng quan tình hình kinh tế, đầu tư, chứng khoán tại Việt Nam, triển vọng 2023; và chia sẻ giải pháp đầu tư nhằm giảm thiểu rủi ro - gia tăng cơ hội để giúp Quý khách tăng trưởng tài sản đạt được mục tiêu tài chính bền vững trung và dài hạn. Hãy tham gia hội thảo cùng HSBC và VinaCapital hướng đến một tương lai thịnh vượng.</td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
