--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -96,7 +96,7 @@
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Tại hội thảo chúng tôi sẽ cập nhật tổng quan tình hình kinh tế, đầu tư, chứng khoán tại Việt Nam; và chia sẻ giải pháp đầu tư nhằm giảm thiểu rủi ro - gia tăng cơ hội để giúp Quý khách tăng trưởng tài sản, đạt được mục tiêu tài chính bền vững trung và dài hạn.<br />
+                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Tại hội thảo chúng tôi sẽ cập nhật tổng quan tình hình kinh tế, đầu tư, chứng khoán tại Việt Nam, triển vọng 2023; và chia sẻ giải pháp đầu tư nhằm giảm thiểu rủi ro - gia tăng cơ hội để giúp Quý khách tăng trưởng tài sản, đạt được mục tiêu tài chính bền vững trung và dài hạn.<br />
                       Hội thảo còn là nơi giao lưu gặp gỡ, đem đến cho Quý khách cơ hội quan hệ hợp tác, cùng hướng đến một tương lai thịnh vượng.</td>
                     </tr>
                     <tr>
@@ -209,8 +209,8 @@
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Giám đốc toàn quốc<br />
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
-							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc Điều hành<br />
-Phát triển Kinh doanh Quỹ Mở,<br />
+							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc điều hành<br />
+Phát triển Kinh doanh Quỹ mở,<br />
 						      VinaCapital</strong></td>
 						  </tr>
 						  </table></td>
@@ -287,7 +287,9 @@ triển vọng 2023</td>
 VinaCapital</strong></td>
 								</tr>
 								<tr>
-								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
+								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Chia sẻ giải pháp đầu tư dài hạn<br />
+								    nhằm giảm thiểu rủi ro - gia tăng<br />
+							      cơ hội trong tương lai</td>
 							    </tr>
 								</table></td>
 					      </tr>
