--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -191,8 +191,8 @@
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Giám đốc toàn quốc<br />
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
-							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc Điều hành<br />
-Phát triển Kinh doanh Quỹ Mở,<br />
+							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc điều hành<br />
+Phát triển Kinh doanh Quỹ mở,<br />
 						      VinaCapital</strong></td>
 						  </tr>
 						  </table></td>
@@ -269,7 +269,9 @@ triển vọng 2023</td>
 VinaCapital</strong></td>
 								</tr>
 								<tr>
-								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Chia sẻ giải pháp đầu tư dài hạn nhằm giảm thiểu rủi ro - gia tăng cơ hội trong tương lai</td>
+								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Chia sẻ giải pháp đầu tư dài hạn<br />
+								    nhằm giảm thiểu rủi ro - gia tăng<br />
+							      cơ hội trong tương lai</td>
 							    </tr>
 								</table></td>
 					      </tr>
