--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -210,7 +210,7 @@
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
 							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc điều hành<br />
-Phát triển Kinh doanh Quỹ mở,<br />
+Phát triển Kinh doanh Quỹ Mở,<br />
 						      VinaCapital</strong></td>
 						  </tr>
 						  </table></td>
@@ -392,7 +392,7 @@ VinaCapital</strong></td>
               </tr>
               <tr>
                 <td>&nbsp;</td>
-                <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Chúng tôi rất mong chờ được gặp gỡ Quý khách tại hội thảo.</td>
+                <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Chúng tôi rất mong chờ được chào đón Quý khách trong buổi hội thảo này.</td>
                 <td>&nbsp;</td>
               </tr>
               <tr>
