--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -97,7 +97,7 @@
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Tại hội thảo chúng tôi sẽ cập nhật tổng quan tình hình kinh tế, đầu tư, chứng khoán tại Việt Nam, triển vọng 2023; và chia sẻ giải pháp đầu tư nhằm giảm thiểu rủi ro - gia tăng cơ hội để giúp Quý khách tăng trưởng tài sản đạt được mục tiêu tài chính bền vững trung và dài hạn. Hãy tham gia hội thảo cùng HSBC và VinaCapital hướng đến một tương lai thịnh vượng.</td>
+                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Tại hội thảo chúng tôi sẽ cập nhật tổng quan tình hình kinh tế, đầu tư, chứng khoán tại Việt Nam, triển vọng 2023; và chia sẻ giải pháp đầu tư nhằm giảm thiểu rủi ro - gia tăng cơ hội để giúp Quý khách tăng trưởng tài sản đạt được mục tiêu tài chính bền vững trung và dài hạn.</td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
@@ -192,7 +192,7 @@
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
 							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc điều hành<br />
-Phát triển Kinh doanh Quỹ mở,<br />
+Phát triển Kinh doanh Quỹ Mở,<br />
 						      VinaCapital</strong></td>
 						  </tr>
 						  </table></td>
@@ -360,7 +360,7 @@ VinaCapital</strong></td>
               </tr>
               <tr>
                 <td>&nbsp;</td>
-                <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Chúng tôi rất mong chờ được gặp gỡ Quý khách tại hội thảo.</td>
+                <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">Chúng tôi rất mong chờ được chào đón Quý khách trong buổi hội thảo này.</td>
                 <td>&nbsp;</td>
               </tr>
               <tr>
