--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -160,7 +160,7 @@
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Khai mạc và phát biểu chào mừng từ đại diện<br />
-                      Ban Giám đốc HSBC và VinaCapital</td>
+                      Ban Giám Đốc HSBC và VinaCapital</td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -191,7 +191,7 @@
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Giám đốc toàn quốc<br />
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
-							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc điều hành<br />
+							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó Tổng giám đốc điều hành<br />
 Phát triển Kinh doanh Quỹ Mở,<br />
 						      VinaCapital</strong></td>
 						  </tr>
