--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -128,7 +128,7 @@
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Thời gian: Thứ 5, ngày 01/12/2022, 17:00 – 19:30</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Địa chỉ: GEM Center, 08 Nguyễn Bỉnh Khiêm, Q.1, Tp.HCM.</td>
+                      <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Địa chỉ: GEM Center, 08 Nguyễn Bỉnh Khiêm, Q.1, TP.HCM.</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -178,7 +178,7 @@
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;">Khai mạc và phát biểu chào mừng từ đại diện<br />
-                      Ban Giám đốc HSBC và VinaCapital</td>
+                      Ban Giám Đốc HSBC và VinaCapital</td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -209,7 +209,7 @@
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Giám đốc toàn quốc<br />
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
-							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó tổng giám đốc điều hành<br />
+							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Phó Tổng giám đốc điều hành<br />
 Phát triển Kinh doanh Quỹ Mở,<br />
 						      VinaCapital</strong></td>
 						  </tr>
