--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -90,7 +90,7 @@
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important;"><strong>Tự tin đầu tư, đón chào thịnh vượng<br />
-                      cùng HSBC và VinaCapital.</strong></td>
+                      cùng HSBC và VinaCapital</strong></td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
@@ -128,7 +128,7 @@
                       <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thời gian: Thứ 5, ngày 01/12/2022, 17:00 - 19:30</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Địa chỉ: GEM Center, 08 Nguyễn Bỉnh Khiêm, Q.1, TP.HCM.</td>
+                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Địa chỉ: GEM Center, số 8, Nguyễn Bỉnh Khiêm, Q.1, TP.HCM.</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -159,7 +159,7 @@
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>17:00 - 17:30</strong></td>
                     </tr>
                     <tr>
-                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Đón Khách</td>
+                      <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Đón khách</td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -283,7 +283,9 @@ chứng khoán, HSBC</strong></td>
 						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
 									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc Kinh doanh,<br />
-VinaCapital</strong></td>
+VinaCapital<br />
+&nbsp;
+									</strong></td>
 								</tr>
 								<tr>
 								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ giải pháp đầu tư dài hạn<br />
@@ -363,7 +365,7 @@ VinaCapital</strong></td>
 						  <tr>
 						    <td width="10" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&bull;</td>
 							  <td valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Để tham gia hội thảo trực tiếp tại GEM Center (17:00 - 19:30):</strong><br />
-						      Xin vui lòng click ô bên dưới  hoặc liên hệ Giám đốc Quan hệ Khách hàng Premier của Quý khách, để xác nhận trước ngày 20/11/2022 (số lượng chỗ ngồi có giới hạn, chúng tôi sẽ phản hồi sau khi nhận được thông tin của quý khách)</td>
+						      Xin vui lòng click ô bên dưới  hoặc liên hệ Giám đốc Quan hệ Khách hàng Premier của Quý khách, để xác nhận trước ngày 20/11/2022 (số lượng chỗ ngồi có giới hạn, chúng tôi sẽ phản hồi sau khi nhận được thông tin của Quý khách)</td>
 						  </tr>
 						  </table></td>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
@@ -392,7 +394,7 @@ VinaCapital</strong></td>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 						  <tr>
 						    <td width="10" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&bull;</td>
-							  <td valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Để tham gia qua hội thảo trực tuyến qua Zoom (17:00 - 19:00):</strong><br />
+							  <td valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Để tham gia hội thảo trực tuyến qua Zoom (17:30 - 19:00):</strong><br />
 					        Xin vui lòng đăng ký tại đây.</td>
 						  </tr>
 						  </table></td>
