--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -91,7 +91,7 @@
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important;"><strong>Tự tin đầu tư, đón chào thịnh vượng<br />
-                      cùng HSBC và VinaCapital.</strong></td>
+                      cùng HSBC và VinaCapital</strong></td>
                     </tr>
                     <tr>
                       <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
@@ -125,7 +125,7 @@
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thời gian: Thứ 5, ngày 01/12/2022, 17:00 - 19:00</td>
+                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thời gian: Thứ 5, ngày 01/12/2022, 17:30 - 19:00</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -262,7 +262,8 @@ chứng khoán, HSBC</strong></td>
 						    <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
 									<td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong style="font-size: 14px">Giám đốc Kinh doanh,<br />
-VinaCapital</strong></td>
+VinaCapital<br />
+&nbsp;</strong></td>
 								</tr>
 								<tr>
 								  <td align="center" valign="top" style="padding: 8px 15px 0 15px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Chia sẻ giải pháp đầu tư dài hạn<br />
