--- a/source/index_vn_1.html
+++ b/source/index_vn_1.html
@@ -110,7 +110,7 @@
 		<tr>
 			<td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body1">
 				<tr>
-					<td align="left" bgcolor="#db0011" valign="middle" style="padding: 0 0 0 84px; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">THỜI GIAN - ĐỊA ĐIỂM</td>
+					<td align="left" bgcolor="#db0011" valign="middle" style="padding: 0 0 0 84px; margin: 0; border: none; line-height: 1.3; font-size: 20px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">THỜI GIAN</td>
 					<td align="left" width="233" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_2.jpg" width="233" height="auto" alt="" style="display: block" /></td>
 					<td width="56" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
 				</tr>
@@ -125,7 +125,7 @@
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                     </tr>
                     <tr>
-                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thời gian: Thứ 5, ngày 01/12/2022, 17:30 - 19:00</td>
+                      <td align="left" style="padding: 0 0 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Thứ 5, ngày 01/12/2022, 17:30 - 19:00</td>
                     </tr>
                     <tr>
                       <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
@@ -166,21 +166,21 @@
                       <td align="center" style="padding: 0 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 						  <tr>
 							  <td width="265" align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_1.jpg" width="175" height="auto" alt="" style="display: block" /></td>
-							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_10.jpg" width="175" height="auto" alt="" style="display: block" /></td>
+							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_6.jpg" width="175" height="auto" alt="" style="display: block" /></td>
 							</tr>
 						  <tr>
 						    <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_5.jpg" width="27" height="auto" alt="" style="display: block" /></td>
+								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG PRAMOTH RAJENDRAN</strong></td>
-									<td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_4.jpg" width="27" height="auto" alt="" style="display: block" /></td>
+								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
 							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_5.jpg" width="27" height="auto" alt="" style="display: block" /></td>
+								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG ERIC LEVINSON</strong></td>
-									<td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_4.jpg" width="27" height="auto" alt="" style="display: block" /></td>
+								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
 					      </tr>
@@ -225,9 +225,9 @@ Phát triển Kinh doanh Quỹ Mở,<br />
 								<tr>
 								  <td align="center" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
-									<td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_5.jpg" width="27" height="auto" alt="" style="display: block" /></td>
-									<td width="200" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG NGÔ ĐĂNG KHOA</strong></td>
-									<td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_4.jpg" width="27" height="auto" alt="" style="display: block" /></td>
+								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
+									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG NGÔ ĐĂNG KHOA</strong></td>
+								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
 							    </tr>
