--- a/source/index_vn_ver2.html
+++ b/source/index_vn_ver2.html
@@ -187,7 +187,7 @@
                       <td align="center" style="padding: 0 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 						  <tr>
 							  <td width="265" align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_1.jpg" width="175" height="auto" alt="" style="display: block" /></td>
-							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_6.jpg" width="175" height="auto" alt="" style="display: block" /></td>
+							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><img src="image/chs_box_10.jpg" width="175" height="auto" alt="" style="display: block" /></td>
 							</tr>
 						  <tr>
 						    <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -200,7 +200,7 @@
 							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
 								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
-									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG ERIC LEVINSON</strong></td>
+									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG BROOK TAYLOR</strong></td>
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
@@ -209,8 +209,8 @@
 							  <td align="center" valign="top" style="padding: 15px 28px 0 28px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Giám đốc toàn quốc<br />
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
-							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Phó Tổng giám đốc điều hành<br />
-Phát triển Kinh doanh Quỹ Mở,<br />
+							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Tổng giám đốc<br />
+						      Công ty Cổ phần quản lý quỹ,<br />
 						      VinaCapital</strong></td>
 						  </tr>
 						  </table></td>
