--- a/source/index_vn_1_ver2.html
+++ b/source/index_vn_1_ver2.html
@@ -179,7 +179,7 @@
 							  <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 								<tr>
 								  <td align="right" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_7.jpg" width="21" height="auto" alt="" style="display: block" /></td>
-									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG ERIC LEVINSON</strong></td>
+									<td width="190" bgcolor="#db0011" align="center" valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF"><strong>ÔNG BROOK TAYLOR</strong></td>
 								  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_8.jpg" width="21" height="auto" alt="" style="display: block" /></td>
 								</tr>
 								</table></td>
@@ -189,7 +189,7 @@
 						      Khối Dịch vụ Quản lý Tài sản<br />
 và Tài chính Cá nhân, HSBC</strong></td>
 							  <td align="center" valign="top" style="padding: 15px 10px 0 10px; margin: 0; border: none; line-height: 1.3; font-size: 14px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Tổng giám đốc<br />
-						      Công ty Cổ phần quản lý quỹ,<br />
+						      Công ty Cổ phần quản lý Quỹ,<br />
 						      VinaCapital</strong></td>
 						  </tr>
 						  </table></td>
