--- a/source/index_vn_1_ver2.html
+++ b/source/index_vn_1_ver2.html
@@ -24,19 +24,15 @@
   <tr>
     <td style="margin: 0px; padding: 0px; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
         <tr>
-          <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><strong><a  href="#" target="_blank" style="font-size:12px !important; color: #808080;">* Vui lòng nhấn vào đây nếu Quý khách không xem được thư điện tử này.</a></strong></td>
+          <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;" class="chs_body"><a href="#" target="_blank" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 12px; color: #808080;"> * Vui lòng nhấn vào đây nếu Quý khách không xem được thư điện tử này. </a></td>
         </tr>
         <tr>
-          <td style="margin: 0px; padding: 0; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;">&nbsp;</td>
+          <td style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 12px; line-height: 1.3; color: #808080;"> Ngân hàng TNHH Một thành viên HSBC (Việt Nam), Tầng 1, 2, 6, Tòa nhà Metropolitan, 235 Đồng Khởi, Phường Bến Nghé, Quận 1, Thành phố Hồ Chí Minh, Việt Nam.<br />
+            (84 28) 37 247 247 (miền Nam) hoặc (84 24) 62 707 707 (miền Bắc).<br />
+            Gửi thư điện tử về: <a href="mailto:direct@hsbc.com.vn" style=" color: #808080">Khối Dịch vụ Quản lý Tài sản và Tài chính Cá nhân</a></td>
         </tr>
         <tr>
-          <td align="left" style="margin: 0px; padding: 0; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;">Ngân hàng TNHH Một thành viên HSBC (Việt Nam), Tầng 1, 2, 6, Tòa nhà Metropolitan, 235 Đồng Khởi, Phường Bến Nghé, Quận 1, Thành phố Hồ Chí Minh, Việt Nam. (84 28) 37 247 666.</td>
-        </tr>
-        <tr>
-          <td align="left" style="margin: 0px; padding: 0; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;"> Gửi thư điện tử về: <a style="color: #808080;"  href="mailto:hsbcpremiervn@hsbc.com.vn"><u><font color="#808080">hsbcpremiervn@hsbc.com.vn</font></u></a></td>
-        </tr>
-        <tr>
-          <td height="25" style="margin: 0px; padding: 0; font-family: Arial, Helvetica, sans-serif !important; font-size: 11px; line-height: 1.5; color: #808080;">&nbsp;</td>
+          <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
         </tr>
       </table></td>
   </tr>
