--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -153,7 +153,7 @@
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Khai mạc và phát biểu chào mừng từ đại diện<br />
-                      Ban Giám Đốc HSBC và VinaCapital</td>
+                      Ban Giám Đốc HSBC</td>
                     </tr>
                     <tr>
                       <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
